# refaver

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAVICON_RESET_RESEARCH.md  LICENSE  README.md  SECURITY.md
.claude/: CLAUDE.md  settings.json
.claude/hooks/: guard-favicon-cache.sh
.claude/skills/cut-release/: SKILL.md
.claude/skills/db-safety-check/: SKILL.md
.claude/skills/make-fixture/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
app/: README.md
cli/: README.md  pyproject.toml
cli/refaver/: __init__.py  __main__.py  cli.py  db.py  favicons.py  safari.py
cli/tests/: conftest.py  fixture.py  test_cli.py  test_db.py  test_favicons.py
packaging/: build-pyz.sh  update-tap-formula.sh
packaging/homebrew/: refaver.rb
